Prevent overflow of method blocks outside of the container

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -220,7 +220,6 @@ pre code {
 }
 
 #rightInner {
-	max-width: 1000px;
 	min-width: 350px;
 }
 
